# data_base_manager

./: .gitignore  README.md  database.ini  pyproject.toml
main/: main.py
src/: config.py  database_classes.py  employers_ids  employers_request_manager.py  request_funcs.py
